--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,66 @@
 @charset "utf-8";
+header {
+  /*temp VV */
+  border-style: dashed;
+  border-color: black;
+  /*temp ^^ */
+  height: 30px;
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  background-color: #b8a4a1;
+
+
+
+  width: 98%;
+
+}
+
+header h1 {font-size: 20px; display: inline;}
+
+nav {
+  /*temp VV
+  border-style: dashed;
+  border-color: black;
+  /*temp ^^ */
+}
+
+ul{position: fixed; top: 25px; right: 90px; bottom: 10px; height: 80%;}
+
+li {
+  /*temp VV */
+  border-style: dashed;
+  border-color: black;
+  /*temp ^^ */
+  text-align: center;
+  display: block;
+
+  list-style-type: none;
+  padding-top: 60px;
+  margin-left:87%;
+  margin-right: 10px;
+  margin-top: 10px;
+  top: 10px;
+
+  width: 20%;
+  height: 75px;
+}
+
+li#in_use{background-color: #d7cec7;}
+li#events{background-color: #565656;}
+li#botm{background-color: #76323f;}
+li#gallery{background-color: #c09f80;}
+li#news{background-color: #b8a4a1;}
+
+div#main h1{
+  font-size: 200px;
+  margin-right: 20%;
+  margin-top: 50px;
+
+  color: #76323f;
+  background-color: #d7cec7;
+  /*temp VV */
+  border-style: dashed;
+  border-color: black;
+  /*temp ^^ */
+}
