--- a/css/styles.css
+++ b/css/styles.css
@@ -1,68 +1,100 @@
 @charset "utf-8";
+*{background-color: #edecf1; font-family: Verdana, Geneva, sans-serif; color: DimGrey; word-wrap: break-word;}
+
+header, nav, #main {
+  animation-name: fadeIn;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in-out;
+  animation-duration: 1s;
+}
+
+h2 {text-indent: 30px;}
+p {text-indent: 30px; margin-left: 60px; z-index: 1;}
+
+.anchor { padding-top: 30px; }
 
 header {
-  /*temp VV */
-  border-style: dashed;
-  border-color: black;
-  /*temp ^^ */
-  height: 30px;
+
+  height: 36px;
   position: fixed;
-  top: 10px;
-  left: 10px;
+  top: 0px;
+  left: 0px;
   background-color: #b8a4a1;
-
-
-
-  width: 98%;
+  width: 100%;
+  margin-bottom: 0;
 
 }
 
-header h1 {font-size: 20px; display: inline;}
+header a {text-decoration: none; background-color: inherit; transition: color .5s ease-in-out;}
+header a:hover {color: black;}
+header h1 {font-size: 20px; display: inline; background-color: inherit;}
 
-nav {
-  /*temp VV
-  border-style: dashed;
-  border-color: black;
-  /*temp ^^ */
-}
+ul{position: fixed; top: 20px; right: 0;height: 100%; width: 18%; text-decoration: none; list-style-type:none;}
 
-ul{position: fixed; top: 25px; right: 90px; bottom: 10px; height: 80%;}
 
 li {
-  /*temp VV */
-  border-style: dashed;
-  border-color: black;
-  /*temp ^^ */
   text-align: center;
   display: block;
 
   list-style-type: none;
-  padding-top: 60px;
-  margin-left:87%;
-  margin-right: 10px;
-  margin-top: 10px;
-  top: 10px;
+  padding-top: 67px;
+  margin-left:0;
+  margin-right: 0;
 
-  width: 20%;
-  height: 75px;
+
+  width: 100%;
+  height: 9.7%;
+
+  opacity: 1;
+
+  background-color: inherit;
+
+  transition: opacity 5s ease-in-out;
+  -moz-transition: opacity .25s ease-in-out;
+  -webkit-transition: opacity .25s ease-in-out;
 }
 
-li#in_use{background-color: #d7cec7;}
-li#events{background-color: #565656;}
-li#botm{background-color: #76323f;}
-li#gallery{background-color: #c09f80;}
-li#news{background-color: #b8a4a1;}
+li:hover {opacity: 0.8}
 
-div#main h1{
+li a {text-decoration: none;
+    color: black;
+    background-color: inherit;
+  }
+
+li#in_use{background-color: #ff964f;}
+li#events{background-color: #b8a4a1;}
+li#botm{background-color: #992e2e;}
+li#gallery{background-color: #d7cec7;}
+li#news{background-color: #565656;}
+
+#main {width: 100%; height: 100%; }
+
+#home h1{
+  display: block;
   font-size: 200px;
-  margin-right: 20%;
-  margin-top: 50px;
-
+  margin-right: 21%;
+  margin-top: 30px;
+  margin-bottom: 20px;
+  height: 700px;
+  left: 0px;
   color: black;
   background-image: url(books2.jpg);
   background-size: cover;
-  /*temp VV */
-  border-style: dashed;
-  border-color: black;
-  /*temp ^^ */
+  overflow: hidden;
+}
+
+div#main h2, div#main p {
+    margin-right: 21%;
+    left: 0px;
+}
+
+#eventsPage, #botmPage, #galleryPage, #newsPage { margin-top: 50px;}
+
+iframe {margin-left:30%;}
+
+/*FADE IN TEST*/
+
+@keyframes fadeIn {
+  0% { opacity:0; }
+  100% { opacity:1; }
 }
