--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+
 *{background-color: #edecf1; font-family: Verdana, Geneva, sans-serif; color: DimGrey; word-wrap: break-word;}
 
 header, nav, #main {
@@ -9,6 +10,7 @@ header, nav, #main {
 }
 
 h2 {text-indent: 30px;}
+
 p {text-indent: 30px; margin-left: 60px; z-index: 1;}
 
 .anchor { padding-top: 30px; }
@@ -91,6 +93,8 @@ div#main h2, div#main p {
 #eventsPage, #botmPage, #galleryPage, #newsPage { margin-top: 50px;}
 
 iframe {margin-left:30%;}
+
+#galleryPage img {margin-left: 150px;}
 
 /*FADE IN TEST*/
 
