--- a/css/styles.css
+++ b/css/styles.css
@@ -9,30 +9,34 @@ header, nav, #main {
   animation-duration: 1s;
 }
 
-h2 {text-indent: 30px;}
+h1 {text-indent: 30px;}
 
-p {text-indent: 30px; margin-left: 60px; z-index: 1;}
+h2 {text-indent: 60px;}
+
+p {text-indent: 30px; margin-left: 90px; z-index: 1;}
 
 .anchor { padding-top: 30px; }
 
 header {
 
   height: 36px;
-  position: fixed;
   top: 0px;
   left: 0px;
   background-color: #b8a4a1;
   width: 100%;
   margin-bottom: 0;
+  position: fixed;
+  z-index: 6;
 
 }
 
 header a {text-decoration: none; background-color: inherit; transition: color .5s ease-in-out;}
+
 header a:hover {color: black;}
+
 header h1 {font-size: 20px; display: inline; background-color: inherit;}
 
-ul{position: fixed; top: 20px; right: 0;height: 100%; width: 18%; text-decoration: none; list-style-type:none;}
-
+ul{position: fixed; top: 20px; right: 0; height: 760px; width: 18%; text-decoration: none; list-style-type:none; z-index: 0;}
 
 li {
   text-align: center;
@@ -42,15 +46,10 @@ li {
   padding-top: 67px;
   margin-left:0;
   margin-right: 0;
-
-
   width: 100%;
-  height: 9.7%;
-
+  height: 11.5%;
   opacity: 1;
-
   background-color: inherit;
-
   transition: opacity 5s ease-in-out;
   -moz-transition: opacity .25s ease-in-out;
   -webkit-transition: opacity .25s ease-in-out;
@@ -58,10 +57,11 @@ li {
 
 li:hover {opacity: 0.8}
 
-li a {text-decoration: none;
-    color: black;
-    background-color: inherit;
-  }
+li a {
+  text-decoration: none;
+  color: black;
+  background-color: inherit;
+}
 
 li#in_use{background-color: #ff964f;}
 li#events{background-color: #b8a4a1;}
@@ -74,20 +74,24 @@ li#news{background-color: #565656;}
 #home h1{
   display: block;
   font-size: 200px;
-  margin-right: 21%;
-  margin-top: 30px;
+  margin-right: 18%;
+  margin-top: 0px;
   margin-bottom: 20px;
-  height: 700px;
+  height: 760px;
   left: 0px;
   color: black;
   background-image: url(books2.jpg);
   background-size: cover;
   overflow: hidden;
+
+  width: 82%;
+  position: relative;
+  z-index: 5;
 }
 
 div#main h2, div#main p {
-    margin-right: 21%;
-    left: 0px;
+  margin-right: 21%;
+  left: 0px;
 }
 
 #eventsPage, #botmPage, #galleryPage, #newsPage { margin-top: 50px;}
