--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 @charset "utf-8";
 
+*****************************[#c08c83]
+
 *{background-color: #edecf1; font-family: Verdana, Geneva, sans-serif; color: DimGrey; word-wrap: break-word;}
 
 header, nav {
